k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: optified-app-service
  namespace: optified
  labels:
    app: optified-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: optified-app
