k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: optified-ingress
  namespace: optified
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: optified-prod-ip
    networking.gke.io/managed-certificates: optified-ssl-cert
    networking.gke.io/v1beta1.FrontendConfig: optified-frontend-config
    kubernetes.io/ingress.allow-http: "false" # Force HTTPS
spec:
  defaultBackend:
    service:
      name: optified-app-service
      port:
        number: 80
